added blurring
